--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 click==7.1.2
 Flask==1.1.2
-Flask-SQLAlchemy==2.4.4
+# Flask-SQLAlchemy==2.4.4
+sqlalchemy==1.2.0b3
 Flask-WTF==0.14.3
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -9,3 +10,6 @@ PyMySQL==1.0.2
 SQLAlchemy==1.3.23
 Werkzeug==1.0.1
 WTForms==2.3.3
+PyMysql==1.0.2
+# Flask-Admin==1.5.7
+jsonify==0.5
