--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
+# sqlalchemy==1.2.0b3
+# Flask-Admin==1.5.7
+
 click==7.1.2
+et-xmlfile==1.0.1
 Flask==1.1.2
-# Flask-SQLAlchemy==2.4.4
-sqlalchemy==1.2.0b3
+Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 itsdangerous==1.1.0
+jdcal==1.4.1
 Jinja2==2.11.3
+jsonify==0.5
 MarkupSafe==1.1.1
+numpy==1.20.1
+openpyxl==3.0.6
+pandas==1.2.3
 PyMySQL==1.0.2
+python-dateutil==2.8.1
+pytz==2021.1
+six==1.15.0
 SQLAlchemy==1.3.23
 Werkzeug==1.0.1
 WTForms==2.3.3
-PyMysql==1.0.2
-# Flask-Admin==1.5.7
-jsonify==0.5
